# ScrAI

./: Blueprint.md  Instructions.txt  README.md  ScrAI.code-workspace  async_agno_agent.py  demo_real_vs_mock.py  development_summary_2.md  main.py  protopope.py  pyproject.toml  simple_agno_agent.py  test_action_variety.py
configurations/: ScrAI_Docs_Pydantic_Schema.md
configurations/scenarios/: pope_vision_scenario.py
configurations/schemas/: actor_schema.py  entity_schema.py  event_schema.py  scenario_schema.py  simulation_definition_schema.py  world_schema.py
docs/: Current_Focus.md
docs/dev_log/: Local_Cloud_LLM.md  ProtoPope.md  dev_log1.md  dev_log2.md
docs/ref/: agno_docs.txt  openrouter_docs  openrouter_docs.txt
engine/actors/: README.md  basic_runtime.py  basic_runtime_agno_v1.py  basic_runtime_mock.backup
engine/llm_services/: llm_interface.py  llm_provider.py
engine/systems/action_system/: __init__.py  action_system.py
tests/: simple_test.py
tests/protopope/: demo_real_vs_mock.py  protopope.py  test_action_variety.py
