[project]
name = "ScrAI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno==1.5.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "docstring-parser==0.16",
    "dotenv==0.9.9",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "shellingham==1.5.4",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "tomli==2.2.1",
    "typer==0.15.4",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "frozenlist==1.6.0",
    "multidict==6.4.4",
    "propcache==0.3.1",
    "yarl==1.20.0"
]
